Closed Bug 1933919 Opened 1 year ago Closed 1 year ago

Crash in [@ mozilla::Maybe<T>::operator* | mozilla::TextControlState::SelectionProperties::SetStart]

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
135 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox133 --- unaffected
firefox134 --- unaffected
firefox135 --- fixed

People

(Reporter: aryx, Assigned: emilio)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

5 crashes from 3 install of Firefox 135.0a1 on Linux and Windows.

Crash report: https://crash-stats.mozilla.org/report/index/81cf9649-ef15-4938-8898-17b9a0241128

MOZ_CRASH Reason:

MOZ_RELEASE_ASSERT(isSome())

Top 10 frames:

0  xul.dll  mozilla::Maybe<unsigned int>::operator*()  mfbt/Maybe.h:989
0  xul.dll  mozilla::TextControlState::SelectionProperties::SetStart(unsigned int)  dom/html/TextControlState.h:351
0  xul.dll  mozilla::dom::HTMLTextAreaElement::ContentWillBeRemoved(nsIContent*)  dom/html/HTMLTextAreaElement.cpp:802
1  xul.dll  mozilla::dom::MutationObservers::NotifyContentWillBeRemoved::<lambda_8>::oper...  dom/base/MutationObservers.cpp:187
1  xul.dll  ForEachAncestorObserver(nsINode*, mozilla::dom::MutationObservers::NotifyCont...  dom/base/MutationObservers.cpp:60
1  xul.dll  Notify(nsINode*, mozilla::dom::MutationObservers::NotifyContentWillBeRemoved:...  dom/base/MutationObservers.cpp:94
1  xul.dll  mozilla::dom::MutationObservers::NotifyContentWillBeRemoved(nsINode*, nsICont...  dom/base/MutationObservers.cpp:186
1  xul.dll  nsINode::RemoveChildNode(nsIContent*, bool)  dom/base/nsINode.cpp:2330
2  xul.dll  nsINode::RemoveChild(nsINode&, mozilla::ErrorResult&)  dom/base/nsINode.cpp:955
2  xul.dll  mozilla::dom::Node_Binding::removeChild(JSContext*, JS::Handle<JSObject*>, vo...  dom/bindings/NodeBinding.cpp:1086
Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

Apparently in some situations it might not be set? Not super familiar
with this code.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Duplicate of this bug: 1934080
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fa34a24cd93f Don't check for maxlength when collapsing the selection. r=masayuki
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/49435 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 135 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: