Bug 1933919 - Don't check for maxlength when collapsing the selection. r=masayuki

Apparently in some situations it might not be set? Not super familiar
with this code.

Differential Revision: https://phabricator.services.mozilla.com/D230516