dom/html/TextControlState.h
@@ -349,18 +349,17 @@ class TextControlState final : public SupportsWeakPtr {
     uint32_t GetStart() const { return mStart; }
     bool SetStart(uint32_t value) {
       uint32_t newValue = std::min(value, *mMaxLength);
-      bool changed = mStart != newValue;
-      mStart = newValue;
-      mIsDirty |= changed;
-      return changed;
+      return SetStartInternal(newValue);
     }
     uint32_t GetEnd() const { return mEnd; }
     bool SetEnd(uint32_t value) {
       uint32_t newValue = std::min(value, *mMaxLength);
-      bool changed = mEnd != newValue;
-      mEnd = newValue;
-      mIsDirty |= changed;
-      return changed;
+      return SetEndInternal(newValue);
+    }
+    void CollapseToStart() {
+      // 0 is always a fine value regardless of max length.
+      SetStartInternal(0);
+      SetEndInternal(0);
     }
     SelectionDirection GetDirection() const { return mDirection; }
     bool SetDirection(SelectionDirection value) {
@@ -383,6 +382,20 @@ class TextControlState final : public SupportsWeakPtr {
     void SetIsDirty() { mIsDirty = true; }
 
    private:
+    bool SetStartInternal(uint32_t aNewValue) {
+      bool changed = mStart != aNewValue;
+      mStart = aNewValue;
+      mIsDirty |= changed;
+      return changed;
+    }
+
+    bool SetEndInternal(uint32_t aNewValue) {
+      bool changed = mEnd != aNewValue;
+      mEnd = aNewValue;
+      mIsDirty |= changed;
+      return changed;
+    }
+
     uint32_t mStart = 0;
     uint32_t mEnd = 0;
     Maybe<uint32_t> mMaxLength;
